--- a/html/service.css
+++ b/html/service.css
@@ -1,69 +1,40 @@
-/*CSS FOR THE HOME PAGE */
 
-.container {
+
+.port {
+    margin: 0;
+    padding: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 5px auto;
-    padding: 13px;
+    justify-content: center;
+    height: 100vh;
+    background-color: #f0f0f0; /* Set a background color for better visibility */
+}
+.port-img{
+    img {
+        width: 50%; /* Decrease the width by 50% */
+        height: 100px; /* Let the height scale proportionally */
+        transform: scale(0.5);
+      }
 }
 
-.content {
-    flex: 1;
-    padding: 20px;
-    text-align: center;
-}
-
-.image {
-    flex: 1;
-    text-align: left;
-}
-
-img {
+.image-with-text {
+    position: relative;
     max-width: 100%;
     height: auto;
 }
 
-@media (max-width: 768px) {
-
-    .mainlogo {
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-        letter-spacing: 2px;
-    }
-
-    .temlogo {
-        padding-left: 99px;
-        font-size: 35px"
-
-    }
-
-    .navbar-toggler {
-        align-items: right;
-    }
-
-    .container {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-
-    .image {
-        text-align: center;
-    }
-
-    img {
-        max-width: 100%;
-        height: auto;
-        margin-bottom: 20px;
-    }
+.text-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
 }
 
-/* END OF CSS FOR THE HOME PAGE */
-
-.container {
+.service {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -72,19 +43,20 @@ img {
     padding: 13px;
 }
 
-.content {
+.ser-content {
     flex: 1;
     padding: 20px;
     text-align: center;
+    
 }
 
-.image {
+.ser-image {
     flex: 1;
     text-align: right;
 }
 
-img {
-    max-width: 100%; /* Set the maximum width to 75% of the screen size */
+.ser-image img {
+    max-width: 50%; /* Set the maximum width to 75% of the screen size */
     height: auto;
 }
 
@@ -94,21 +66,21 @@ img {
 }
 
 @media (max-width: 768px) {
-    .container {
+    .service {
         flex-direction: column;
         align-items: center;
         padding: 20px;
     }
 
-    .content {
+    .ser-content {
         order: 2;
        }  
    
-   .image{
+   .ser-image{
        order: 1;
    }
 
-    .image {
+    .ser-image {
         text-align: center;
     }
 
@@ -118,5 +90,3 @@ img {
         margin-bottom: 20px;
     }
 }
-
-/* END OF CSS FOR THE ABOUT PAGE */
