--- a/Final/service.css
+++ b/Final/service.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 /* Basic styling and positioning of elements */
-body {color:#444;font-size:16px;}
+#some-box {color:#444;font-size:16px;}
 #some-box {background:#fff;padding:40px 0px 80px;font-family:'Open Sans', sans-serif;}
 #some-box h1 {text-align:center;}
 #some-box h3 {font-size:26px;}
